# jugeeya.github.io

./: .gitignore  CNAME  README.md  index.html  package.json  script.js  steam_community_data.md  styles.css
.github/workflows/: auto-redeploy.yml  build-matchlogger-dist.yml  build-wasm.yml  deploy-broker.yml  record-demo.yml  screenshots.yml  validate-and-merge-tags.yml
broker/: README.md  worker.js  wrangler.toml
demo/: .gitignore  README.md  demo.mjs  generate-fixture.mjs  lib.mjs  package.json  shots.mjs
leaderboard/: index.html  script.js  styles.css
matchlogger/: DESIGN.md  README.md  index.html  matchlogger.css  matchlogger.js
matchlogger/sender/: README.md  config.example.json  dashboard.py  rivals-station-reporter.pyw  rivals_stats.py  station_sender.py  station_widget.py  station_widget.pyw  test_rivals_stats.py
scripts/: build_default_baseline.mjs  build_tags_manifest.py  validate_tags.py
tags/: control-defaults.json  index.html  offline-template.html  tagdiff.js  taglocal.js  tags.css  tags.js
tags/data/: README.md  altn-72eaedb2.json  alvrg-ea2886ed.json  ani-3w26id.json  ani-a48d0512.json  box-000adab7.json  brujita-8f5808e7.json  dalek-1aa1dcdd.json  hyper-8ada046a.json  index.json  jakey-83e6fb3e.json  joule-97d57999.json  jugz-1w4gf4.json  jugz-6192f6f1.json  jugz-ao44wp.json  jugz-pwp2zg.json  kim-5lqlgp.json  kim-8u5m6k.json  kim-e85def91.json  loom-74c453c9.json  rvb-272541f7.json  stpat-e2bb5bd3.json  (+1 more)
tagtool/: Cargo.toml
vods/: index.html  vods.css  vods.js
wasm/: .gitignore  Cargo.toml  README.md
wasm/src/: lib.rs
(+5 files in other folders)
