[package]
name = "r2tag-wasm"
version = "0.1.0"
edition = "2021"
description = "In-browser Rivals II tag (.sav / .r2tag) read & write, compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.125" # must match the installed wasm-bindgen CLI
uesave = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"

[profile.release]
opt-level = "s"
lto = true
